Finalized compact screen. Added hidden reward slots and corresponding config. Added additional test commands. Fixed remaining issues with new slots.

--- a/src/main/resources/assets/daily_rewards/lang/ru_ru.json
+++ b/src/main/resources/assets/daily_rewards/lang/ru_ru.json
@@ -4,7 +4,7 @@
   "text.daily_rewards.next_reward.reload": "Перезагрузи, чтобы утвердить!",
   "text.daily_rewards.player_already_rewarded_today": "Игрок %1$s уже сегодня получил награду!",
   "text.daily_rewards.reward_screen": "Дней вознаграждения: %1$s день(ей)",
-  "text.daily_rewards.reward_screen_none": "💰 Daily Rewards",
+  "text.daily_rewards.reward_screen_none": "Daily Rewards",
   "text.daily_rewards.rewarded_item_empty": "Предмет награды пуст, проверьте логи и конфигурацию!",
   "text.daily_rewards.rewarded_item": "Поздравляю %1$s ты получил %2$s в качестве регонизации за %3$s дня(ей) в этом мире за этот месяц.",
   "text.daily_rewards.unclaimed_rewarded_item": "%1$s, у тебя есть не утверждённые ежедневные награды, обязательно забери их в течении следующих %2$s дней!",
