--- a/src/main/resources/assets/daily_rewards/lang/de_de.json
+++ b/src/main/resources/assets/daily_rewards/lang/de_de.json
@@ -1,16 +1,23 @@
 {
+  "text.daily_rewards.daily_rewards.title": "Belohnungen (%1$s)",
+  "text.daily_rewards.special_rewards.title": "Spezial Belohnungen (%1$s)",
   "text.daily_rewards.claim_rewards": "Fordere deine täglichen Prämien mit %1$s ein!",
-  "text.daily_rewards.next_reward.in": "Nächste Belohnung in %1$s",
+  "text.daily_rewards.next_reward.in": "Belohnung in %1$s",
   "text.daily_rewards.next_reward.reload": "Neu laden für Belohnung!",
+  "text.daily_rewards.next_special_reward.in": "Spezielle Belohnung in %1$s",
+  "text.daily_rewards.next_special_reward.reload": "Neu laden für spezielle Belohnung!",
   "text.daily_rewards.player_already_rewarded_today": "Spieler %1$s hat bereits seine täglichen Belohnungen für diesen Tag erhalten.",
   "text.daily_rewards.reward_screen": "Belohnte Tage: %1$s Tag(e)",
-  "text.daily_rewards.reward_screen_none": "💰 Daily Rewards",
+  "text.daily_rewards.reward_screen_none": "Daily Rewards",
   "text.daily_rewards.rewarded_item_empty": "Die Belohnung ist leer, bitte prüfe die Logfiles und die entsprechende Konfiguration!",
   "text.daily_rewards.rewarded_item": "Herzlichen Glückwunsch %1$s, du hast %2$s als Anerkenung für %3$s Tag(e) auf dieser Welt (für diesen Monat) erhalten.",
   "text.daily_rewards.unclaimed_rewarded_item": "%1$s du hast nicht eingeforderte Tagesbelohnungen, bitte stelle sicher, dass du diese in den nächsten %2$s Tagen einforderst!",
   "text.daily_rewards.unclaimed_rewarded_item_today": "%1$s, du hast nicht beanspruchte Belohnungen, bitte stelle sicher, dass du diese noch heute anforderst!!!",
+  "text.daily_rewards.unclaimed_special_rewarded_item": "%1$s du hast nicht eingeforderte spezielle Tagesbelohnungen, bitte stelle sicher, dass du diese in den nächsten %2$s Tagen einforderst!",
+  "text.daily_rewards.unclaimed_special_rewarded_item_today": "%1$s, du hast nicht beanspruchte spezielle Belohnungen, bitte stelle sicher, dass du diese noch heute anforderst!!!",
 
   "text.daily_rewards.empty_reward.description": "Für diesen Tag gibt es in diesem Monat keine täglichen Belohnungen.",
+  "text.daily_rewards.hidden_reward.description": "Diese Belohnung ist versteckt, du kannst sie erst beanspruchen, wenn du sie freigeschaltet hast.",
   "text.daily_rewards.lock_day.description": "Dieser Tag ist gesperrt, Sie können Ihre täglichen Belohnungen für diesen Tag für diesen Monat nicht anfordern.",
   "text.daily_rewards.skip_day.description": "Dieser Tag wird übersprungen, Sie können Ihre täglichen Belohnungen für diesen Tag für diesen Monat nicht anfordern.",
   "text.daily_rewards.skipped_day.description": "Dieser Tag wurde übersprungen, ein kleiner Schritt, um Ihre nächsten täglichen Belohnungen für diesen Monat zu erhalten.",
@@ -29,6 +36,7 @@
   "text.daily_rewards.unlocked_day.info": "\u2714 Dieser Tag ist bereits freigeschaltet!",
 
   "item.daily_rewards.empty_reward": "Keine Belohnung",
+  "item.daily_rewards.hidden_reward": "Versteckte Belohnung",
   "item.daily_rewards.lock_day": "Gesperrter Tag",
   "item.daily_rewards.skip_day": "Tag überspringen",
   "item.daily_rewards.skipped_day": "Übersprungener Tag",
