--- a/src/main/resources/assets/daily_rewards/lang/en_us.json
+++ b/src/main/resources/assets/daily_rewards/lang/en_us.json
@@ -1,16 +1,23 @@
 {
+  "text.daily_rewards.daily_rewards.title": "Rewards (%1$s)",
+  "text.daily_rewards.special_rewards.title": "Special Rewards (%1$s)",
   "text.daily_rewards.claim_rewards": "Claim your daily rewards with %1$s !",
   "text.daily_rewards.next_reward.in": "Next reward in %1$s",
   "text.daily_rewards.next_reward.reload": "Reload to claim!",
+  "text.daily_rewards.next_special_reward.in": "Next special reward in %1$s",
+  "text.daily_rewards.next_special_reward.reload": "Reload to claim special!",
   "text.daily_rewards.player_already_rewarded_today": "Player %1$s was already rewarded today!",
   "text.daily_rewards.reward_screen": "Rewarded Days: %1$s day(s)",
-  "text.daily_rewards.reward_screen_none": "💰 Daily Rewards",
+  "text.daily_rewards.reward_screen_none": "Daily Rewards",
   "text.daily_rewards.rewarded_item_empty": "Reward Item is empty, please check the logs and the configuration!",
   "text.daily_rewards.rewarded_item": "Congratulation %1$s you got %2$s as regonization for %3$s day(s) in this world for this month.",
   "text.daily_rewards.unclaimed_rewarded_item": "%1$s you have unclaimed daily rewards, please make sure to claim them in the next %2$s days!",
   "text.daily_rewards.unclaimed_rewarded_item_today": "%1$s you have unclaimed daily rewards, please make sure to claim them today!!!",
+  "text.daily_rewards.unclaimed_special_rewarded_item": "%1$s you have unclaimed daily special rewards, please make sure to claim them in the next %2$s days!",
+  "text.daily_rewards.unclaimed_special_rewarded_item_today": "%1$s you have unclaimed daily special rewards, please make sure to claim them today!!!",
 
   "text.daily_rewards.empty_reward.description": "There is no daily rewards for this day for this month.",
+  "text.daily_rewards.hidden_reward.description": "This reward is hidden, you can't claim it until you unlock it.",
   "text.daily_rewards.lock_day.description": "This day is locked, you can't claim your daily rewards for this day for this month.",
   "text.daily_rewards.skip_day.description": "This day is skipped, you can't claim your daily rewards for this day for this month.",
   "text.daily_rewards.skipped_day.description": "This day was skipped, a small step to claim your next daily rewards for this month.",
@@ -29,6 +36,7 @@
   "text.daily_rewards.unlocked_day.info": "\u2714 This day was already unlocked!",
 
   "item.daily_rewards.empty_reward": "No reward",
+  "item.daily_rewards.hidden_reward": "Hidden reward",
   "item.daily_rewards.lock_day": "Locked day",
   "item.daily_rewards.skip_day": "Skip Day",
   "item.daily_rewards.skipped_day": "Skipped day",
